--- a/EmployeeList/EmployeeList/EmployeeCell.xib
+++ b/EmployeeList/EmployeeList/EmployeeCell.xib
@@ -10,27 +10,27 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EmployeeCell" id="WkV-6e-2is" customClass="EmployeeCell" customModule="EmployeeList" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="68"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="96"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="WkV-6e-2is" id="PXj-nz-c94">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="68"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="96"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="98n-m7-S0u">
-                        <rect key="frame" x="8" y="13" width="42" height="42"/>
+                        <rect key="frame" x="8" y="8" width="80" height="80"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="42" id="NYA-vG-oCi"/>
-                            <constraint firstAttribute="height" constant="42" id="fi5-FG-Siv"/>
+                            <constraint firstAttribute="width" constant="80" id="NYA-vG-oCi"/>
+                            <constraint firstAttribute="height" constant="80" id="fi5-FG-Siv"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Test Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AEt-Ke-IOH">
-                        <rect key="frame" x="324.5" y="8" width="81.5" height="21"/>
+                        <rect key="frame" x="316.5" y="16" width="81.5" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Test Team" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mxb-Lk-fzO">
-                        <rect key="frame" x="340" y="43" width="66" height="17"/>
+                        <rect key="frame" x="332" y="71" width="66" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" systemColor="secondaryLabelColor"/>
                         <nil key="highlightedColor"/>
@@ -38,12 +38,13 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="98n-m7-S0u" firstAttribute="centerY" secondItem="PXj-nz-c94" secondAttribute="centerY" id="EaJ-Tq-CSx"/>
-                    <constraint firstAttribute="trailing" secondItem="AEt-Ke-IOH" secondAttribute="trailing" constant="8" id="F3b-Jg-BOH"/>
-                    <constraint firstItem="AEt-Ke-IOH" firstAttribute="top" secondItem="PXj-nz-c94" secondAttribute="top" constant="8" id="JKQ-CI-U7r"/>
+                    <constraint firstAttribute="trailing" secondItem="AEt-Ke-IOH" secondAttribute="trailing" constant="16" id="F3b-Jg-BOH"/>
+                    <constraint firstItem="AEt-Ke-IOH" firstAttribute="top" secondItem="PXj-nz-c94" secondAttribute="top" constant="16" id="JKQ-CI-U7r"/>
+                    <constraint firstItem="98n-m7-S0u" firstAttribute="top" secondItem="PXj-nz-c94" secondAttribute="top" constant="8" id="KFg-Nk-uRu"/>
                     <constraint firstAttribute="bottom" secondItem="Mxb-Lk-fzO" secondAttribute="bottom" constant="8" id="PKL-b7-QOC"/>
-                    <constraint firstAttribute="trailing" secondItem="Mxb-Lk-fzO" secondAttribute="trailing" constant="8" id="TnP-eC-7CN"/>
+                    <constraint firstAttribute="trailing" secondItem="Mxb-Lk-fzO" secondAttribute="trailing" constant="16" id="TnP-eC-7CN"/>
+                    <constraint firstAttribute="bottom" secondItem="98n-m7-S0u" secondAttribute="bottom" constant="8" id="Va9-6v-v9c"/>
                     <constraint firstItem="98n-m7-S0u" firstAttribute="leading" secondItem="PXj-nz-c94" secondAttribute="leading" constant="8" id="aCi-h7-hac"/>
-                    <constraint firstItem="Mxb-Lk-fzO" firstAttribute="top" secondItem="AEt-Ke-IOH" secondAttribute="bottom" constant="14" id="re9-J2-t0A"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
